userMeta addition to the model
