# go-apps/meep-ctrl-engine/api/swagger.yaml
@@ -1331,6 +1331,11 @@ definitions:
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
           type: "string"
+      userMeta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
       domains:
         type: "array"
         items:
@@ -1669,6 +1674,11 @@ definitions:
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
           type: "string"
+      userMeta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
       zones:
         type: "array"
         items:
@@ -1890,6 +1900,11 @@ definitions:
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
           type: "string"
+      userMeta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
       networkLocations:
         type: "array"
         items:
@@ -2004,6 +2019,11 @@ definitions:
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
           type: "string"
+      userMeta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
       physicalLocations:
         type: "array"
         items:
@@ -2072,6 +2092,11 @@ definitions:
           type: "string"
           description: "Names of network locations within range of physical location"
       meta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
+      userMeta:
         type: "object"
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
@@ -2150,6 +2175,11 @@ definitions:
         type: "string"
         description: "Chart supplemental information related to the group (service)"
       meta:
+        type: "object"
+        description: "Key/Value Pair Map (string, string)"
+        additionalProperties:
+          type: "string"
+      userMeta:
         type: "object"
         description: "Key/Value Pair Map (string, string)"
         additionalProperties:
