# go-apps/meep-ctrl-engine/server/process.go
@@ -54,4 +54,7 @@ type Process struct {
 
 	// Key/Value Pair Map (string, string)
 	Meta map[string]string `json:"meta,omitempty"`
+
+	// Key/Value Pair Map (string, string)
+	UserMeta map[string]string `json:"userMeta,omitempty"`
 }
