# go-apps/meep-tc-engine/server/domain.go
@@ -36,5 +36,8 @@ type Domain struct {
 	// Key/Value Pair Map (string, string)
 	Meta map[string]string `json:"meta,omitempty"`
 
+	// Key/Value Pair Map (string, string)
+	UserMeta map[string]string `json:"userMeta,omitempty"`
+
 	Zones []Zone `json:"zones,omitempty"`
 }
