# go-apps/meep-tc-engine/server/physical_location.go
@@ -29,5 +29,8 @@ type PhysicalLocation struct {
 	// Key/Value Pair Map (string, string)
 	Meta map[string]string `json:"meta,omitempty"`
 
+	// Key/Value Pair Map (string, string)
+	UserMeta map[string]string `json:"userMeta,omitempty"`
+
 	Processes []Process `json:"processes,omitempty"`
 }
